--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -48,9 +48,12 @@
         <a class="navbar-brand" href="#">Moonjoke</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav">
-            <li><%= link_to "Link1", "/path1"  %></li>
-            <li><%= link_to "Link2", "/path2"  %></li>
-            <li><%= link_to "Link3", "/path3"  %></li>
+            <li><%= link_to "Sign in", "/path1"  %></li>
+
+            <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+            
+            <li><%= link_to "Log in", "/path2"  %></li>
+            <li><%= link_to "Parameters", "/path3"  %> </li> <i class="fa fa-camera-retro fa-lg"></i>
           </ul>
         </div>
       </div>
