--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -14,8 +14,8 @@
 // Font Awesome
 @import "fontawesome/font-awesome";
 
-// Glyphicons
-//@import "twitter/bootstrap/glyphicons.less";
+//Glyphicons
+@import "twitter/bootstrap/glyphicons.less";
 
 // Your custom LESS stylesheets goes here
 //
