--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,2 +1,18 @@
 <h1>Members#show</h1>
 <p>Find me in app/views/members/show.html.erb</p>
+<div class="container">
+<div class="row">
+    <div class="col-xs-3" style="border: 1px solid #000;"><%= image_tag("profile.png", :class => "profile") %></div>
+    <div class="col-xs-9" style="background-color: #c93535;">
+        <h2>PSEUDO</h2>
+        <div class="row">Âge: 18 ans</div>
+        <div class="row">Facebook: lié</div>
+        <div class="row">Âge humouristique: 20-25 ans</div>
+    </div>
+</div>
+<div class="row">
+    <h2>Statistiques</h2>
+    <div class="col-lg-6"></div>
+    <div class="col-lg-6"></div>
+</div>
+</div>
