--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,18 +1,25 @@
-<h1>Members#show</h1>
-<p>Find me in app/views/members/show.html.erb</p>
 <div class="container">
-<div class="row">
-    <div class="col-xs-3" style="border: 1px solid #000;"><%= image_tag("profile.png", :class => "profile") %></div>
-    <div class="col-xs-9" style="background-color: #c93535;">
+<div class="row jumbotron">
+    <div class="col-sm-3"><%= image_tag("profile.png", :class => "profile") %></div>
+    <div class="col-sm-offset-1 col-sm-8">
         <h2>PSEUDO</h2>
-        <div class="row">Âge: 18 ans</div>
-        <div class="row">Facebook: lié</div>
-        <div class="row">Âge humouristique: 20-25 ans</div>
+        <div class="row"><span>Âge: 18 ans<span></div>
+        <div class="row"><span>Facebook: lié</span></div>
+        <div class="row"><span>Âge humouristique: 20-25 ans</span></div>
     </div>
 </div>
-<div class="row">
+<div class="row jumbotron" style="padding-top: 20px;">
     <h2>Statistiques</h2>
-    <div class="col-lg-6"></div>
-    <div class="col-lg-6"></div>
+    <div class="row">
+        <h3>Réputation</h3>
+        <div class="col-xs-6">Likes: 6</div>
+        <div class="col-xs-6">Dislikes: 26</div>
+    </div>
+    <div class="row">
+        <h3>Uploads</h3>
+        <div class="col-xs-6">Photos: 52</div>
+        <div class="col-xs-6">Vidéos: 12</div>
+        <div class="col-xs-6">Blagues: 1</div>
+    </div>
 </div>
 </div>
