--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -47,6 +47,7 @@
         </button>
         <a class="navbar-brand" href="#">Moonjoke</a>
         <div class="navbar-collapse collapse navbar-responsive-collapse">
+          <p class "text-right">
           <ul class="nav navbar-nav">
             <li><%= link_to "Sign in", "/path1"  %></li>
                  
@@ -57,7 +58,9 @@
             <li><%= link_to "/path4" do %>
               <i class="fa fa-upload"></i>
             <%end%>
+
           </ul>
+        </p>
         </div>
       </div>
     </div>
