added modal settings

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
 <div class="row jumbotron">
-    <div class="col-sm-3"><%= image_tag("profile.png", :class => "profile") %></div>
-    <div class="col-sm-offset-1 col-sm-8">
+    <div class="col-sm-3"><%= image_tag("profile.png", :class => "img-responsive center-block") %></div>
+    <div class="col-sm-9" style="text-align: center;">
         <h2>PSEUDO</h2>
         <div class="row"><span>Âge: 18 ans<span></div>
-        <div class="row"><span>Facebook: lié</span></div>
+        <div class="row"><span style="color: #0663d0;">Facebook:</span><span style="color: #239530;"> lié</span></div>
         <div class="row"><span>Âge humouristique: 20-25 ans</span></div>
     </div>
 </div>
@@ -12,8 +12,8 @@
     <h2>Statistiques</h2>
     <div class="row">
         <h3>Réputation</h3>
-        <div class="col-xs-6">Likes: 6</div>
-        <div class="col-xs-6">Dislikes: 26</div>
+        <div class="col-xs-6">Likes: <span style="color: #239530;">6</span></div>
+        <div class="col-xs-6">Dislikes: <span style="color: #952323;">19</span></div>
     </div>
     <div class="row">
         <h3>Uploads</h3>
