begin list index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,3 +22,7 @@
 .green { color: #22CA33; }
 .blue { color: #01B0F0; }
 .red { color: #F7230C; }
+
+.title { font-size: 25px;}
+
+.resume p { font-size: 15px;}
