--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,2 +1,59 @@
-<h1>Contents#index</h1>
-<p>Find me in app/views/contents/index.html.erb</p>
+<div class="container">
+	<div class="row jumbotron">
+		<div class="col-sm-2"><%= image_tag("pictureListContents.png", :alt =>"ictureofContents", :width=>125, :height=>125) %></div>
+		<div class="col-sm-offset-1 col-xs-3">
+        	<div class="title row"><span>TITLE</span></div>
+        	<div class="row"><span>Auteur</span></div>
+        	<div class="row"><span>3 views</span></div>
+        	<div class="row"><span>4 likes / 5 dislikes</span></div>
+    	</div>
+		<div class="col-sm-offset-0 col-sm-6">
+			<div class="resume">
+        	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis, odio eu consequat volutpat, orci lorem blandit urna, vel fringilla ipsum risus quis ex. In.</p>
+        </div>
+    </div>
+	</div>
+	<div class="row jumbotron">
+		<div class="col-sm-2"><%= image_tag("pictureListContents.png", :alt =>"ictureofContents", :width=>125, :height=>125) %></div>
+		<div class="col-sm-offset-1 col-xs-3">
+        	<div class="title row"><span>TITLE</span></div>
+        	<div class="row"><span>Auteur</span></div>
+        	<div class="row"><span>3 views</span></div>
+        	<div class="row"><span>4 likes / 5 dislikes</span></div>
+    	</div>
+		<div class="col-sm-offset-0 col-sm-6">
+			<div class="resume">
+        	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis, odio eu consequat volutpat, orci lorem blandit urna, vel fringilla ipsum risus quis ex. In.</p>
+        </div>
+    </div>
+	</div>
+	<div class="row jumbotron">
+		<div class="col-sm-2"><%= image_tag("pictureListContents.png", :alt =>"ictureofContents", :width=>125, :height=>125) %></div>
+		<div class="col-sm-offset-1 col-xs-3">
+        	<div class="title row"><span>TITLE</span></div>
+        	<div class="row"><span>Auteur</span></div>
+        	<div class="row"><span>3 views</span></div>
+        	<div class="row"><span>4 likes / 5 dislikes</span></div>
+    	</div>
+		<div class="col-sm-offset-0 col-sm-6">
+			<div class="resume">
+        	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis, odio eu consequat volutpat, orci lorem blandit urna, vel fringilla ipsum risus quis ex. In.</p>
+        </div>
+    </div>
+	</div>
+	<div class="row jumbotron">
+		<div class="col-sm-2"><%= image_tag("pictureListContents.png", :alt =>"ictureofContents", :width=>125, :height=>125) %></div>
+		<div class="col-sm-offset-1 col-xs-3">
+        	<div class="title row"><span>TITLE</span></div>
+        	<div class="row"><span>Auteur</span></div>
+        	<div class="row"><span>3 views</span></div>
+        	<div class="row"><span>4 likes / 5 dislikes</span></div>
+    	</div>
+		<div class="col-sm-offset-0 col-sm-6">
+			<div class="resume">
+        	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur mollis, odio eu consequat volutpat, orci lorem blandit urna, vel fringilla ipsum risus quis ex. In.</p>
+        </div>
+    </div>
+	</div>
+</div>
+
