--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -52,7 +52,9 @@
               <i class="fa fa-upload"></i>
             <%end%></li>
             <li type="button" data-toggle="modal" data-target="#myModal">
+                <%= link_to "#" do %>
               <i class="fa fa-cog"></i>
+                <%end%>
             </li>
             <li><%= link_to "/path3" do %>
               <i class="fa fa-pencil-square-o green"></i> Sign Up
@@ -76,12 +78,20 @@
                   </div>
                   <div class="modal-body" style="text-align: center;">
                       <div class="row">
-                        <div class="col-xs-6 center-block"><%= image_tag("profile.png", :class => "img-responsive", :style => "height: 32px") %>Pref 1</div>
-                        <div class="col-xs-6 center-block">Pref 2</div>
+                        <div class="col-xs-6">
+                            <%= image_tag("profile.png", :class => "img-responsive") %>
+                        </div>
+                        <div class="col-xs-6 center-block">
+                          <%= image_tag("profile.png", :class => "img-responsive") %>
+                        </div>
                       </div>
                       <div class="row">
-                        <div class="col-xs-6 center-block">Pref 3</div>
-                        <div class="col-xs-6 center-block">Display</div>
+                        <div class="col-xs-6 center-block">
+                          <%= image_tag("profile.png", :class => "img-responsive") %>
+                        </div>
+                        <div class="col-xs-6 center-block">
+                          <%= image_tag("profile.png", :class => "img-responsive") %>
+                        </div>
                       </div>
                   </div>
                   <div class="modal-footer">
