Added images for settings

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -80,18 +80,18 @@
                   <div class="modal-body" style="text-align: center;">
                       <div class="row">
                         <div class="col-xs-6">
-                            <%= image_tag("profile.png", :class => "img-responsive") %>
+                            <%= image_tag("video.png", :class => "img-responsive") %>
                         </div>
                         <div class="col-xs-6 center-block">
-                          <%= image_tag("profile.png", :class => "img-responsive") %>
+                            <%= image_tag("image.png", :class => "img-responsive") %>
                         </div>
                       </div>
                       <div class="row">
                         <div class="col-xs-6 center-block">
-                          <%= image_tag("profile.png", :class => "img-responsive") %>
+                            <%= image_tag("joke.png", :class => "img-responsive") %>
                         </div>
                         <div class="col-xs-6 center-block">
-                          <%= image_tag("profile.png", :class => "img-responsive") %>
+                            <%= image_tag("display_grid.png", :class => "img-responsive") %>
                         </div>
                       </div>
                   </div>
