--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -45,17 +45,17 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-<<<<<<< Updated upstream
+
         <a class="navbar-brand" href="#">Moonjoke</a>
-        <div class="navbar-collapse collapse navbar-responsive-collapse">
+        <!--<div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav navbar-right">
-=======
+-->
+
         <div class="col-lg-3">
             <a id="logo" href="#"> <%= image_tag('logo.png', :class => "img-responsive") %> </a>
         </div>
         <div class="col-lg-9 navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav navbar-right">
->>>>>>> Stashed changes
             <li><%= link_to "/path4" do %>
               <i class="fa fa-upload"></i>
             <%end%></li>
@@ -71,7 +71,6 @@
               <i class="fa fa-sign-in blue"></i> Sign In
             <%end%></li>
           </ul>
-        </p>
         </div>
       </div>
     </div>
@@ -113,12 +112,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-9">
-          <!-- <%= bootstrap_flash %>
+           <%= bootstrap_flash %>
 
           <%= yield %>
 
         </div>
-        <div class="col-lg-3"> -->
+        <div class="col-lg-3">
 
           <!--<div class="well sidebar-nav">
             <h3>Sidebar</h3>
