--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,3 +1,18 @@
+<div class="brn-group" role="group" aria-label="...">
+	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria haspopup="true" aria-expanded="false">-15  <i class="fa fa-sort-desc"></i></button
+	</button>
+	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria haspopup="true" aria-expanded="false">15-20  <i class="fa fa-sort-desc"></i></button
+	</button>
+	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria haspopup="true" aria-expanded="false">20-30  <i class="fa fa-sort-desc"></i></button
+	</button>
+	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria haspopup="true" aria-expanded="false">30-40  <i class="fa fa-sort-desc"></i></button
+	</button>
+	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria haspopup="true" aria-expanded="false">40-45 <i class="fa fa-sort-desc"></i></button
+	</button>
+	<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria haspopup="true" aria-expanded="false">Vote  <i class="fa fa-sort-desc"></i></button
+	</button>
+</div>
+
 <div class="container">
 	<div class="row jumbotron">
 		<div class="col-sm-2"><%= image_tag("pictureListContents.png", :alt =>"ictureofContents", :width=>125, :height=>125) %></div>
@@ -56,4 +71,3 @@
     </div>
 	</div>
 </div>
-
