--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -64,12 +64,14 @@
               <i class="fa fa-cog"></i>
                 <%end%>
             </li>
-            <li><%= link_to "/path3" do %>
+            <!--<li><%= link_to "/path3" do %>
               <i class="fa fa-pencil-square-o green"></i> Sign Up
-            <%end%></li>
-            <li><%= link_to "/path1" do %>
+            <%end%></li>-->
+            <!--<li><%= link_to "/path1" do %>
               <i class="fa fa-sign-in blue"></i> Sign In
-            <%end%></li>
+            <%end%></li>-->
+            <li><button class="btn btn-success navbar-btn"><i class="fa fa-pencil-square-o"></i>  Sign up</button></li>
+            <li><button class="btn btn-primary navbar-btn col-lg-offset-2"><i class="fa fa-sign-in"></i> Sign in</button></li>
           </ul>
         </div>
       </div>
