--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -53,7 +53,7 @@
         <div class="col-lg-3">
             <a id="logo" href="#"> <%= image_tag('logo.png', :class => "img-responsive") %> </a>
         </div>
-        <div class="col-lg-9 navbar-collapse collapse navbar-responsive-collapse">
+        <div class="navbar-collapse collapse navbar-responsive-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "/path4" do %>
               <i class="fa fa-upload"></i>
