--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -50,10 +50,15 @@
             <ul class="nav navbar-nav navbar-right">
 -->
 
-        <div class="col-lg-3">
+<!--        <div id="test" class="col-lg-3">
             <a id="logo" href="#"> <%= image_tag('logo.png', :class => "img-responsive") %> </a>
-        </div>
+        </div>-->
+
+
         <div class="col-lg-9 navbar-collapse collapse navbar-responsive-collapse">
+
+          <a id="logo" href="#"> <%= image_tag('logo.png', :class => "img-responsive") %> </a>
+
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "/path4" do %>
               <i class="fa fa-upload"></i>
