--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,10 +33,14 @@
 #logo
 {
     display: inline-block;
-    min-width: 20%;
-    max-width: 20%;
-    min-height: 20%;
-    max-height: 20%;
-    margin-right: 35%;
-    margin-left: 10%;
+    min-width: 10%;
+    max-width: 10%;
+    min-height: 10%;
+    max-height: 10%;
+}
+
+#nav
+{
+  display: inline-block;
+  float: right;
 }
