--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -63,7 +63,7 @@
 
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <a id="logo" href="#"> <%= image_tag('logo.png', :class => "img-responsive") %> </a>
-          <ul class="nav navbar-nav navbar-bottom">
+          <ul id="nav" class="nav navbar-nav">
             <li><%= link_to "/path4" do %>
               <i class="fa fa-upload"></i>
             <%end%></li>
