--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -11,27 +11,30 @@
     		<input type="radio" name="options" id="option3"> 20-30
   		</label>
   		<label class="btn btn-primary">
-    		<input type="radio" name="options" id="option3"> 30-40
+    		<input type="radio" name="options" id="option4"> 30-40
   		</label>
   		<label class="btn btn-primary">
-    		<input type="radio" name="options" id="option3"> +40
+    		<input type="radio" name="options" id="option5"> +40
+  		</label>
+  		<label class="btn btn-primary">
+    		<input type="radio" name="options" id="option6"> <i class="fa fa-thumbs-o-up"></i>  Vote
   		</label>
 	</div>
  	<div class="btn-group pull-right" data-toggle="buttons">
   		<label class="btn btn-primary">
-    		<input type="radio" name="options" id="option1"> Popular
+    		<input type="radio" name="options" id="option1"> <i class="fa fa-star"></i>  Popular
   		</label>
   		<label class="btn btn-primary">
-    		<input type="radio" name="options" id="option2"> Recent
+    		<input type="radio" name="options" id="option2"> <i class="fa fa-clock-o"></i>  Recent
   		</label>
   		<label class="btn btn-primary">
     		<input type="radio" name="options" id="option3"> Top Week
   		</label>
   		<label class="btn btn-primary">
-    		<input type="radio" name="options" id="option3"> Top Month
+    		<input type="radio" name="options" id="option4"> Top Month
   		</label>
 	</div>
-	
+
 	<div class="row jumbotron">
 		<div class="col-sm-2"><%= image_tag("pictureListContents.png", :alt =>"ictureofContents", :width=>125, :height=>125) %></div>
 		<div class="col-sm-offset-1 col-xs-3">
