navbar buttons center + lg

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,3 +44,15 @@
   display: inline-block;
   float: right;
 }
+
+.navbar-nav > li > a
+{
+	margin-top: 20px;
+	margin-bottom: 15px;
+}
+
+.navbar-btn
+{
+	margin-top: 26px;
+	margin-bottom: 15px;
+}
