--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -65,21 +65,24 @@
           <a id="logo" href="#"> <%= image_tag('logo.png', :class => "img-responsive") %> </a>
           <ul id="nav" class="nav navbar-nav">
             <li><%= link_to "/path4" do %>
-              <i class="fa fa-upload"></i>
+              <i class="fa fa-upload fa-lg"></i>
             <%end%></li>
             <li type="button" data-toggle="modal" data-target="#myModal">
                 <%= link_to "#" do %>
-              <i class="fa fa-cog"></i>
+              <i class="fa fa-cog fa-lg"></i>
                 <%end%>
             </li>
-            <!--<li><%= link_to "/path3" do %>
-              <i class="fa fa-pencil-square-o green"></i> Sign Up
-            <%end%></li>-->
-            <!--<li><%= link_to "/path1" do %>
-              <i class="fa fa-sign-in blue"></i> Sign In
-            <%end%></li>-->
-            <li><button class="btn btn-success navbar-btn"><i class="fa fa-pencil-square-o"></i>  Sign up</button></li>
-            <li><button class="btn btn-primary navbar-btn col-lg-offset-2"><i class="fa fa-sign-in"></i> Sign in</button></li>
+            <li>
+              <button class="btn btn-success navbar-btn btn">
+                <i class="fa fa-pencil-square-o">
+                </i> Sign up
+              </button>
+            </li>
+            <li>
+              <button class="btn btn-primary navbar-btn col-lg-offset-2">
+                <i class="fa fa-sign-in"></i> Sign in
+              </button>
+            </li>
           </ul>
         </div>
       </div>
