--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
 	<div class = "menu_contents">
   		<div class="btn-group" data-toggle="buttons">
-  			<label class=" btn btn-primary">
+  			<label class=" btn btn-primary active">
     			<input type="radio" name="options" id="option1"> -15
   			</label>
   			<label class="btn btn-primary">
@@ -22,11 +22,11 @@
   			</label>
 		</div>
  	<div class="btn-group pull-right" data-toggle="buttons">
-  		<label class="btn btn-primary">
-    		<input type="radio" name="options" id="option1"> <i class="fa fa-star"></i>  Popular
+  		<label class="btn btn-primary active">
+    		<input type="radio" name="options" id="option1"> <i class="fa fa-clock-o"></i>  Recent
   		</label>
   		<label class="btn btn-primary">
-    		<input type="radio" name="options" id="option2"> <i class="fa fa-clock-o"></i>  Recent
+    		<input type="radio" name="options" id="option2"> <i class="fa fa-star"></i>  Popular
   		</label>
   		<label class="btn btn-primary">
     		<input type="radio" name="options" id="option3"> <i class="fa fa-trophy"></i>  Top Week
