--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -45,7 +45,7 @@
   float: right;
 }
 
-.navbar-nav > li > a
+.navbar-nav li a
 {
 	margin-top: 20px;
 	margin-bottom: 15px;
@@ -55,4 +55,24 @@
 {
 	margin-top: 26px;
 	margin-bottom: 15px;
+}
+
+#signin a
+{
+	color: #FFFFFF;
+}
+
+#signin a:hover
+{
+	text-decoration: none;
+}
+
+#signup a
+{
+	color: #FFFFFF;
+}
+
+#signup a:hover
+{
+	text-decoration: none;
 }
