--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -62,25 +62,33 @@
         </div-->
 
         <div class="navbar-collapse collapse navbar-responsive-collapse">
-          <a id="logo" href="#"> <%= image_tag('logo.png', :class => "img-responsive") %> </a>
+          <span id="logo">
+            <%= link_to "/" do %>
+            <%= image_tag('logo.png', :class => "img-responsive") %>
+            <%end%>
+          </span>
           <ul id="nav" class="nav navbar-nav">
             <li><%= link_to "/path4" do %>
               <i class="fa fa-upload fa-lg"></i>
             <%end%></li>
             <li type="button" data-toggle="modal" data-target="#myModal">
-                <%= link_to "#" do %>
+              <%= link_to "#" do %>
               <i class="fa fa-cog fa-lg"></i>
-                <%end%>
+              <%end%>
             </li>
-            <li>
-              <button class="btn btn-success navbar-btn btn">
+            <li id="signup">
+              <button type="button" class="btn btn-success navbar-btn btn">
+                <%= link_to "/register" do %>
                 <i class="fa fa-pencil-square-o">
                 </i> Sign up
+                <%end%>
               </button>
             </li>
-            <li>
-              <button class="btn btn-primary navbar-btn col-lg-offset-2">
+            <li id="signin">
+              <button type="button" class="btn btn-primary navbar-btn col-lg-offset-2" >
+                <%= link_to "/login" do %>
                 <i class="fa fa-sign-in"></i> Sign in
+                <%end%>
               </button>
             </li>
           </ul>
