--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,2 +1,28 @@
-<h1>Contents#new</h1>
-<p>Find me in app/views/contents/new.html.erb</p>
+<div class="jumbotron" style="padding-top: 20px">
+    <div class="row clearfix">
+        <h2 class="pull-left">Upload</h2>
+        <div class="btn-group pull-right" data-toggle="buttons">
+            <label data-toggle="tab" href="#video_upload" class="btn btn-primary active">
+                <input id="option1" type="radio" name="options">Movie
+            </label>
+            <label data-toggle="tab" href="#picture_upload" class="btn btn-primary">
+                <input id="option2" type="radio" name="options">Picture
+            </label>
+            <label data-toggle="tab" href="#text_upload" class="btn btn-primary">
+                <input id="option3" type="radio" name="options">Text
+            </label>
+        </div>
+    </div>
+    
+    <div class="tab-content">
+        <div id="video_upload" class="tab-pane active row">
+            Movie
+        </div>
+        <div id="picture_upload" class="tab-pane row">
+            Picture
+        </div>
+        <div id="text_upload" class="tab-pane row">
+            Text
+        </div>
+    </div>
+</div>
