--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,2 +1,40 @@
-<h1>Members#new</h1>
-<p>Find me in app/views/members/new.html.erb</p>
+<div class="panel panel-primary">
+  <div id="log" class="panel-heading">SIGN UP</div>
+<div class="panel-body">
+  <form class="panel-body">
+
+<!--    <div id="googlelogo">-->
+      <a class="pull-center" id="google"> <%= image_tag('googlesignin.png', :class => "img-responsive center-block", :style => "max-width:250px") %> </a>
+
+
+    <div id="or">
+      or
+    </div>
+
+    <div class="form-group">
+      <label for="exampleInputEmail1">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+    <div class="form-group">
+      <label for="exampleInputPassword1">Confirm password</label>
+      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+    </div>
+
+    <div>
+      <label>Birthdate</label>
+      <input type="date" class="form-control" id="exampleInputBirthdate" placeholder="birthdate">
+    </div>
+
+    <div class="checkbox">
+      <label>
+        <input type="checkbox"> Remember me
+      </label>
+    </div>
+    <button type="submit" class="btn btn-default">Submit</button>
+  </form>
+</div>
+</div>
