link in menu to upload

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -68,7 +68,7 @@
             <%end%>
           </span>
           <ul id="nav" class="nav navbar-nav">
-            <li><%= link_to "/path4" do %>
+              <li><%= link_to "/upload" do %>
               <i class="fa fa-upload fa-lg"></i>
             <%end%></li>
             <li type="button" data-toggle="modal" data-target="#myModal">
