--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -63,12 +63,12 @@
 
         <div class="navbar-collapse collapse navbar-responsive-collapse">
           <span id="logo">
-            <%= link_to "/" do %>
+            <%= link_to root_path do %>
             <%= image_tag('logo.png', :class => "img-responsive") %>
             <%end%>
           </span>
           <ul id="nav" class="nav navbar-nav navbar-right">
-            <li><%= link_to "/upload" do %>
+            <li><%= link_to upload_path do %>
               <i class="fa fa-upload fa-lg"></i>
             <%end%></li>
             <li type="button" data-toggle="modal" data-target="#myModal">
@@ -77,7 +77,7 @@
               <%end%>
             </li>
             <li id="signup">
-              <%= link_to "/register" do %>
+              <%= link_to register_path do %>
               <span class="btn navbar-btn btn-success">
                 <i class="fa fa-pencil-square-o">
                 </i> Sign up
@@ -85,7 +85,7 @@
               <%end%>
             </li>
             <li id="signin">
-              <%= link_to "/login" do %>
+              <%= link_to login_path do %>
               <span class="btn navbar-btn btn-primary" >
                 <i class="fa fa-sign-in"></i> Sign in
               </span>
