--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -103,24 +103,19 @@
               <div class="modal-content">
                   <div class="modal-header">
                       <button type="button" class="close" data-dismiss="modal">&times;</button>
-                      <h4 class="modal-title">Préférences</h4>
+                      <h4 class="modal-title">Settings</h4>
                   </div>
                   <div class="modal-body" style="text-align: center;">
                       <div class="row">
-                        <div class="col-xs-6">
-                            <%= image_tag("video.png", :class => "img-responsive") %>
-                        </div>
-                        <div class="col-xs-6 center-block">
-                            <%= image_tag("image.png", :class => "img-responsive") %>
-                        </div>
+                          <h2>Filter</h2>
+                          <button class="btn btn-danger"><%= image_tag("video.png", :class => "img-responsive center-block img-rounded") %></button>
+                          <button class="btn btn-success"><%= image_tag("image.png", :class => "img-responsive center-block img-rounded") %></button>
+                          <button class="btn btn-success"><%= image_tag("joke.png", :class => "img-responsive center-block img-rounded") %></button>
                       </div>
                       <div class="row">
-                        <div class="col-xs-6 center-block">
-                            <%= image_tag("joke.png", :class => "img-responsive") %>
-                        </div>
-                        <div class="col-xs-6 center-block">
-                            <%= image_tag("display_grid.png", :class => "img-responsive") %>
-                        </div>
+                          <h2>Display</h2>
+                          <button class="btn btn-default active"><%= image_tag("display_grid.png", :class => "img-responsive center-block img-rounded") %></button>
+                          <button class="btn btn-default"><%= image_tag("display_line.png", :class => "img-responsive center-block img-rounded") %></button>
                       </div>
                   </div>
                   <div class="modal-footer">
