--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -4,12 +4,16 @@
   <form class="panel-body">
 
 <!--    <div id="googlelogo">-->
-      <a class="pull-center" id="google"> <%= image_tag('googlesignin.png', :class => "img-responsive center-block", :style => "max-width:250px") %> </a>
+      <!--<a class="pull-center" id="google"> <%= image_tag('google.png', :class => "img-responsive center-block", :style => "max-width:250px") %> </a>-->
 
+      <a href="#" class="btn azm-social azm-btn azm-border-bottom azm-google"><i class="fa fa-google"></i> Log in with Google</a>
 
     <div id="or">
       or
     </div>
+
+    <!--<a href="#" class="btn azm-social azm-btn azm-border-bottom azm-google"><i class="fa fa-google"></i> Log in with Google</a>-->
+
 
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
