--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -81,7 +81,7 @@
             <li id="signup">
               <%= link_to register_path do %>
               <span class="btn navbar-btn btn-success">
-                <i class="fa fa-pencil-square-o"></i> Sign up
+                <i class="fa fa-pencil-square-o"></i> Register
               </span>
               <%end%>
             </li>
