--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -6,7 +6,12 @@
 <!--    <div id="googlelogo">-->
       <!--<a class="pull-center" id="google"> <%= image_tag('google.png', :class => "img-responsive center-block", :style => "max-width:250px") %> </a>-->
 
-      <a href="#" class="btn azm-social azm-btn azm-border-bottom azm-google"><i class="fa fa-google"></i> Log in with Google</a>
+      <!--<a href="#" class="btn azm-social azm-btn azm-border-bottom azm-google"><i class="fa fa-google"></i> Log in with Google</a>-->
+
+      <a id="google" class="btn btn-block btn-social btn-google">
+        <i class="fa fa-google"></i>
+        Sign in with Google
+      </a>
 
     <div id="or">
       or
