--- a/app/views/members/new.html.erb
+++ b/app/views/members/new.html.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-primary">
-  <div id="log" class="panel-heading">SIGN UP</div>
+  <div id="log" class="panel-heading">REGISTER</div>
 <div class="panel-body">
   <form class="panel-body">
 
