--- a/app/views/contents/moderate.html.erb
+++ b/app/views/contents/moderate.html.erb
@@ -1,2 +1,27 @@
-<h1>Contents#moderate</h1>
-<p>Find me in app/views/contents/moderate.html.erb</p>
+<div class="contentvideo text-center">
+	<div class="title row"><span>TITLE by Toto</span></div>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/HoZss4Sc1E0" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<div class="vote text-center">
+	<button type="button" class="btn btn-success">Ok</button>
+	<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#why">Not Ok</button>
+</div>
+
+<div class="modal fade" id="why">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title">Why the content is not valid ?</h4>
+      </div>
+      <div class="modal-body">
+        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Send the reason</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
