--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -75,3 +75,19 @@
 	margin-top: 20px;
 
 }
+
+.btn-success-moderate
+{
+	margin-top: 15px
+}
+
+.btn-failed-moderate
+{
+	margin-top: 15px;
+	margin-left:100px;
+}
+
+.title
+{
+	margin-bottom:15px;
+}
