--- a/app/views/contents/moderate.html.erb
+++ b/app/views/contents/moderate.html.erb
@@ -1,13 +1,14 @@
+<div class="container jumbotron">
 <div class="contentvideo text-center">
 	<div class="title row"><span>TITLE by Toto</span></div>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/HoZss4Sc1E0" frameborder="0" allowfullscreen></iframe>
 </div>
 
 <div class="vote text-center">
-	<button type="button" class="btn btn-success">Ok</button>
-	<button type="button" class="btn btn-danger" data-toggle="modal" data-target="#why">Not Ok</button>
+	<button type="button" class="btn btn-success btn-success-moderate">Ok</button>
+	<button type="button" class="btn btn-danger btn-failed-moderate" data-toggle="modal" data-target="#why">Not Ok</button>
 </div>
-
+</div>
 <div class="modal fade" id="why">
   <div class="modal-dialog">
     <div class="modal-content">
