--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -149,7 +149,7 @@
       </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2015</p>
+        <p>&copy; Moonjoke 2015</p>
       </footer>
 
     </div> <!-- /container -->
