--- a/app/views/contents/vote.html.erb
+++ b/app/views/contents/vote.html.erb
@@ -1,2 +1,21 @@
-<h1>Contents#vote</h1>
-<p>Find me in app/views/contents/vote.html.erb</p>
+<div class="container jumbotron" style="padding-top: 20px">
+	<div class="contentvideo text-center">
+		<div class="title row">
+			TITLE by Toto
+		</div>
+		<iframe style="padding-top: 20px" width="560" height="315" src="https://www.youtube.com/embed/HoZss4Sc1E0" frameborder="0" allowfullscreen>
+		</iframe>
+   	</div>
+   	<div class="vote text-center row" style="padding-top: 20px">
+   		<span class="col-lg-6">
+			<button type="button" class="btn btn-success btn-lg col-lg-offset-3 col-lg-6">
+				<i class="fa fa-smile-o fa-lg"></i> Funny !
+			</button>
+		</span>
+		<span class="col-lg-6">
+			<button type="button" class="btn btn-danger btn-lg col-lg-offset-3 col-lg-6">
+				<i class="fa fa-meh-o fa-lg"></i> Meh...
+			</button>
+		</span>
+	</div>
+</div>
