--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -92,6 +92,15 @@
               </span>
               <%end%>
             </li>
+
+            <li id="signout">
+              <%= link_to login_path do %>
+              <span class="btn navbar-btn btn-failed" >
+                <i class="fa fa-sign-out"></i> Sign out
+              </span>
+              <%end%>
+            </li>
+
           </ul>
         </div>
       </div>
