centered upload page

--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="jumbotron" style="padding-top: 20px">
     <div class="row clearfix">
         <h2 class="pull-left">Upload</h2>
@@ -61,6 +62,7 @@
             Text
         </div>
     </div>
+</div>
 </div>
 
 <script>
