sign out + recentrage

--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -95,7 +95,7 @@
 
             <li id="signout">
               <%= link_to login_path do %>
-              <span class="btn navbar-btn btn-failed" >
+              <span class="btn navbar-btn btn-danger" >
                 <i class="fa fa-sign-out"></i> Sign out
               </span>
               <%end%>
