fixed category navigation

--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -1,7 +1,7 @@
 
 <div class="container">
-
-  		<div class="btn-group" data-toggle="buttons">
+<div class="row">
+    <div class="btn-group" data-toggle="buttons">
   		  <label class=" btn btn-primary active">
     			<input type="radio" name="options" id="option1"> -15
   			</label>
@@ -36,6 +36,7 @@
     		  <input type="radio" name="options" id="option4"> <i class="fa fa-trophy"></i>  Top Month
   		  </label>
   </div>
+    </div>
   <div class="list_contents">
 	<div class="row jumbotron">
 		<div class="col-sm-2"><%= image_tag("pictureListContents.png", :alt =>"pictureofContents", :width=>125, :height=>125) %></div>
