--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -124,8 +124,8 @@
                       </div>
                       <div class="row">
                           <h2>Display</h2>
-                          <button class="btn btn-default active"><%= image_tag("display_grid.png", :class => "img-responsive center-block img-rounded") %></button>
-                          <button class="btn btn-default"><%= image_tag("display_line.png", :class => "img-responsive center-block img-rounded") %></button>
+                          <button class="btn btn-default"><%= image_tag("display_grid.png", :class => "img-responsive center-block img-rounded") %></button>
+                          <button class="btn btn-default active"><%= image_tag("display_line.png", :class => "img-responsive center-block img-rounded") %></button>
                       </div>
                   </div>
                   <div class="modal-footer">
