amelioration des settings

--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -17,7 +17,7 @@
     
     <div class="tab-content">
         <div id="video_upload" class="tab-pane active row">
-            <h4>Submission form<small> - movie</small></h4>
+            <h4>Submission form<small> - Movie</small></h4>
             <form>
                 <div class="form-group">
                     <label for="inputvideolabel">URL</label>
@@ -38,7 +38,7 @@
         
         
         <div id="picture_upload" class="tab-pane row">
-            <h4>Submission form<small> - picture</small></h4>
+            <h4>Submission form<small> - Picture</small></h4>
             <form>
                 <div class="form-group">
                     <label for="inputpicturelabel">URL</label>
