--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -124,8 +124,13 @@
                       </div>
                       <div class="row">
                           <h2>Display</h2>
-                          <button class="btn btn-default"><%= image_tag("display_grid.png", :class => "img-responsive center-block img-rounded") %></button>
-                          <button class="btn btn-default active"><%= image_tag("display_line.png", :class => "img-responsive center-block img-rounded") %></button>
+                          
+                          
+                          <div class="btn-group" data-toggle="buttons">
+                              <label class="btn btn-default"><input type="radio" name="options" id="option1"><%= image_tag("display_grid.png", :class => "img-responsive center-block img-rounded") %></label>
+                              <label class="btn btn-default active"><input type="radio" name="options" id="option1"><%= image_tag("display_line.png", :class => "img-responsive center-block img-rounded") %></label>
+                          </div>
+                          
                       </div>
                   </div>
                   <div class="modal-footer">
