--- a/app/views/contents/vote.html.erb
+++ b/app/views/contents/vote.html.erb
@@ -1,19 +1,69 @@
 <div class="container jumbotron" style="padding-top: 20px">
 	<div class="contentvideo text-center">
-		<div class="title row">
-			TITLE by Toto
+		<div class="title">
+			E=GANESH² <span style="font-size: small; margin-left: 10px">by Toto</span>
 		</div>
-		<iframe style="padding-top: 20px" width="560" height="315" src="https://www.youtube.com/embed/HoZss4Sc1E0" frameborder="0" allowfullscreen>
-		</iframe>
+		<div class="col-lg-offset-2 col-lg-8">
+			<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px">
+				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/beS6GpVl1Mk" frameborder="0" allowfullscreen>
+				</iframe>
+			</div>
+		</div>
    	</div>
-   	<div class="vote text-center row" style="padding-top: 20px">
-   		<span class="col-lg-6">
-			<button type="button" class="btn btn-success btn-lg col-lg-offset-3 col-lg-6">
+   	<div class="vote">
+   		<span class="col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
 				<i class="fa fa-smile-o fa-lg"></i> Funny !
 			</button>
 		</span>
-		<span class="col-lg-6">
-			<button type="button" class="btn btn-danger btn-lg col-lg-offset-3 col-lg-6">
+		<span class="col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+				<i class="fa fa-meh-o fa-lg"></i> Meh...
+			</button>
+		</span>
+	</div>
+</div>
+<div class="container jumbotron" style="padding-top: 20px">
+	<div class="contentvideo text-center">
+		<div class="title row">
+			iSurface <span style="font-size: small; margin-left: 10px">by Toto</span>
+		</div>
+		<image class="img-responsive center-block" src="http://hijinksensue.com/wp-content/uploads/2013/08/2012-06-19-surface-tension.jpg">
+		</image>
+   	</div>
+   	<div class="vote row" style="padding-top: 20px">
+   		<span class="col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+				<i class="fa fa-smile-o fa-lg"></i> Funny !
+			</button>
+		</span>
+		<span class="col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+				<i class="fa fa-meh-o fa-lg"></i> Meh...
+			</button>
+		</span>
+	</div>
+</div>
+<div class="container jumbotron" style="padding-top: 20px">
+	<div class="contentvideo text-center">
+		<div class="title">
+			Bloqués - Si j'étais riche <span style="font-size: small; margin-left: 10px">by Toto</span>
+		</div>
+		<div class="col-lg-offset-2 col-lg-8">
+			<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px">
+				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WjsXFY_tGx4" frameborder="0" allowfullscreen>
+				</iframe>
+			</div>
+		</div>
+   	</div>
+   	<div class="vote">
+   		<span class="col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+				<i class="fa fa-smile-o fa-lg"></i> Funny !
+			</button>
+		</span>
+		<span class="col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
 				<i class="fa fa-meh-o fa-lg"></i> Meh...
 			</button>
 		</span>
