--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Contents controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#path_to_vote a:hover
+{
+	text-decoration: none;
+}
+
+#path_to_vote a
+{
+	color: #FFFFFF;
+}
