--- a/app/views/contents/vote.html.erb
+++ b/app/views/contents/vote.html.erb
@@ -12,12 +12,12 @@
    	</div>
    	<div class="vote">
    		<span class="col-sm-6 col-md-6 col-lg-6">
-			<button type="button" class="btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn-vote btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
 				<i class="fa fa-smile-o fa-lg"></i> Funny !
 			</button>
 		</span>
 		<span class="col-sm-6 col-md-6 col-lg-6">
-			<button type="button" class="btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn-vote btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
 				<i class="fa fa-meh-o fa-lg"></i> Meh...
 			</button>
 		</span>
@@ -33,12 +33,12 @@
    	</div>
    	<div class="vote row" style="padding-top: 20px">
    		<span class="col-sm-6 col-md-6 col-lg-6">
-			<button type="button" class="btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn-vote btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
 				<i class="fa fa-smile-o fa-lg"></i> Funny !
 			</button>
 		</span>
 		<span class="col-sm-6 col-md-6 col-lg-6">
-			<button type="button" class="btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn-vote btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
 				<i class="fa fa-meh-o fa-lg"></i> Meh...
 			</button>
 		</span>
@@ -58,14 +58,22 @@
    	</div>
    	<div class="vote">
    		<span class="col-sm-6 col-md-6 col-lg-6">
-			<button type="button" class="btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn-vote btn btn-success btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
 				<i class="fa fa-smile-o fa-lg"></i> Funny !
 			</button>
 		</span>
 		<span class="col-sm-6 col-md-6 col-lg-6">
-			<button type="button" class="btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
+			<button type="button" class="btn-vote btn btn-danger btn-lg col-xs-offset-3 col-sm-offset-3 col-md-offset-3 col-lg-offset-3 col-xs-6 col-sm-6 col-md-6 col-lg-6">
 				<i class="fa fa-meh-o fa-lg"></i> Meh...
 			</button>
 		</span>
 	</div>
 </div>
+
+<script>
+    $(document).load(new function() {
+        $(".btn-vote").click(function() {
+            $(this).parent().parent().parent().slideUp();
+        });
+    });
+</script>
