vote page - date + title

--- a/app/views/contents/vote.html.erb
+++ b/app/views/contents/vote.html.erb
@@ -1,8 +1,6 @@
 <div class="container jumbotron" style="padding-top: 20px">
 	<div class="contentvideo text-center">
-		<div class="title">
-			E=GANESH² <span style="font-size: small; margin-left: 10px">by Toto</span>
-		</div>
+		<h3>E=GANESH² <small>- by Toto, 1 hour ago.</small></h3>
 		<div class="col-lg-offset-2 col-lg-8">
 			<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px">
 				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/beS6GpVl1Mk" frameborder="0" allowfullscreen>
@@ -25,9 +23,7 @@
 </div>
 <div class="container jumbotron" style="padding-top: 20px">
 	<div class="contentvideo text-center">
-		<div class="title row">
-			iSurface <span style="font-size: small; margin-left: 10px">by Toto</span>
-		</div>
+		<h3>iSurface <small>- by Toto, 2 hour ago.</small></h3>
 		<image class="img-responsive center-block" src="http://hijinksensue.com/wp-content/uploads/2013/08/2012-06-19-surface-tension.jpg">
 		</image>
    	</div>
@@ -46,9 +42,7 @@
 </div>
 <div class="container jumbotron" style="padding-top: 20px">
 	<div class="contentvideo text-center">
-		<div class="title">
-			Bloqués - Si j'étais riche <span style="font-size: small; margin-left: 10px">by Toto</span>
-		</div>
+		<h3>Bloqués - Si j'étais riche <small>- by Toto, 4 hour ago.</small></h3>
 		<div class="col-lg-offset-2 col-lg-8">
 			<div class="embed-responsive embed-responsive-16by9" style="margin-bottom: 20px">
 				<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/WjsXFY_tGx4" frameborder="0" allowfullscreen>
